# nina-pygeoapi

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  update_config.py
.github/workflows/: docker.yaml
conf/: config.yaml
nvdb/: __init__.py  vegobjekter.py
src/: update_config.py
src/conf/: config.yaml
src/nvdb/: __init__.py  vegobjekter.py
