[project]
name = "pygeoapi-nvdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"},
]
dependencies = [
    "pygeoapi>=0.13.0",
    "shapely>=1.8.5.post1",
    "walrus>=0.9.2",
    "flask>=2.2.2",
    "hydra-core>=1.3.1",
    "requests>=2.28.1",
    "pydantic~=1.10.14",
]
requires-python = ">=3.10"
license = {text = "GPLv3"}
[project.optional-dependencies]
prod = [
    "gunicorn>=20.1.0",
    "sentry-sdk>=1.40.5",
]

[tool]

[tool.black]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[tool.ruff]
fix = true
