[project]
authors = [
  {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "pygeoapi>=0.18.0",
  "shapely>=1.8.5.post1",
  "walrus>=0.9.2",
  "flask>=2.2.2",
  "hydra-core>=1.3.1",
  "requests>=2.28.1",
  "pydantic~=1.10.14",
  "backoff"
]
description = ""
license = {text = "GPL-3.0+"}
name = "nina-pygeoapi"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
prod = [
  "gunicorn>=20.1.0",
  "sentry-sdk>=1.40.5"
]
tools = [
  "pre-commit",
  "pyyaml",
  "GitPython"
]

[project.scripts]
"nina-pygeoapi_update_config" = "update_config:main"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "ANN"]
